--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
 title:               mackavaili
-tagline:             'A Jekyll theme'
+tagline:             'Not Perfect, Just Perfectly Remarkable'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+url:                 http://mackavaili.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
@@ -11,7 +11,7 @@ permalink:           pretty
 author:
   name:              M. Vail
   url:               https://bsky.app/profile/mackavaili.bsky.social
-  email:             
+  email:             kbrxznb8@duck.com
 
 # Gems
 plugins:
